namespaces/jay/nginx/service-test1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: www-flesher-app-jay-kubevip-svc
spec:
  type: LoadBalancer
  selector:
    app: www-flesher-app-jay
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
