namespaces/jay/nginx/ingress-tls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-flesher-app-jay-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /jay
spec:
  rules:
  - host: "www.flesher.app"
    http:
      paths:
      - path: /jay
        pathType: Prefix
        backend:
          service:
            name: www-flesher-app-jay
            port:
              number: 80
